# Manchester_Robotics_Robotica_Inteligente

Week_4_Challenge/puzzlebot_localisation/: package.xml  setup.py
Week_4_Challenge/puzzlebot_localisation/config/: waypoints.yaml
Week_4_Challenge/puzzlebot_localisation/launch/: full_navigation.launch.py
Week_4_Challenge/puzzlebot_localisation/puzzlebot_localisation/: puzzlebot_ColorDetectionNode.py  puzzlebot_controller.py  puzzlebot_path_generator.py
