<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_localisation</name>
  <version>0.0.0</version>
  <description>Localization, control and navigation package for the Puzzlebot mobile robot using ROS2</description>
  <maintainer email="mario.mtz@manchester-robotics.com">Mario Martinez</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencias core -->
  <depend>rclpy</depend>
  <depend>ros2launch</depend>
  <depend>python3-numpy</depend>
  <depend>transforms3d</depend>

  <!-- Mensajes y servicios ROS -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>         <!-- ← Nuevo: para Image -->
  <depend>cv_bridge</depend>           <!-- ← Nuevo: para convertir ROS Image ↔ OpenCV -->
  <depend>image_transport</depend>     <!-- ← Recomendada: para subscribe/publish más eficiente -->

  <!-- TF -->
  <depend>tf2_ros_py</depend>

  <!-- Tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
